[gd_scene load_steps=34 format=2]

[ext_resource path="res://textures/tengkorak/jalan/vampire.0001.png" type="Texture" id=1]
[ext_resource path="res://src/game/enemies/Boss.gd" type="Script" id=2]
[ext_resource path="res://src/game/hud/debug_showhide.gd" type="Script" id=3]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0010.png" type="Texture" id=4]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0014.png" type="Texture" id=5]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0012.png" type="Texture" id=6]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0019.png" type="Texture" id=7]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0020.png" type="Texture" id=8]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0021.png" type="Texture" id=9]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0022.png" type="Texture" id=10]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0024.png" type="Texture" id=11]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0007.png" type="Texture" id=12]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0006.png" type="Texture" id=13]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0011.png" type="Texture" id=14]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0017.png" type="Texture" id=15]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0026.png" type="Texture" id=16]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0002.png" type="Texture" id=17]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0005.png" type="Texture" id=18]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0013.png" type="Texture" id=19]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0015.png" type="Texture" id=20]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0016.png" type="Texture" id=21]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0003.png" type="Texture" id=22]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0018.png" type="Texture" id=23]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0008.png" type="Texture" id=24]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0023.png" type="Texture" id=25]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0025.png" type="Texture" id=26]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0004.png" type="Texture" id=27]
[ext_resource path="res://textures/tengkorak/jalan/vampire.0009.png" type="Texture" id=28]
[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5, 44 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TempSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "stun"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 1.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TempSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 1 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 25 ), ExtResource( 11 ), ExtResource( 26 ), ExtResource( 16 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Boss"]]
position = Vector2( -1, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -7 )
shape = SubResource( 1 )

[node name="TempSprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="StunTime" type="Timer" parent="."]
one_shot = true

[node name="DebugPathfinding" type="Line2D" parent="."]
width = 2.0
default_color = Color( 1, 0.984314, 0, 1 )
texture_mode = -1082211219
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/stun = SubResource( 4 )
anims/walk = SubResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 29 )]
margin_left = -15.0
margin_top = -66.0
margin_right = -15.0
margin_bottom = -66.0

[node name="Hallowen0001" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 1 )
scale = Vector2( 0.08, 0.08 )

[connection signal="timeout" from="StunTime" to="." method="_on_StunTime_timeout"]
